// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index page While fetching Matches snapshot 1`] = `
<Layout>
  <Jumbotron
    tag="div"
  >
    <UnicodeSearchField
      value="U+0041"
    />
    <p
      className="jsx-3269325724 examples"
    >
      Examples: "
      <a
        className="jsx-3269325724 suggestionLink"
        href="#"
        onClick={[Function]}
      >
        U+0041
      </a>
      ", "
      <a
        className="jsx-3269325724 suggestionLink"
        href="#"
        onClick={[Function]}
      >
        HEART
      </a>
      ", "
      <a
        className="jsx-3269325724 suggestionLink"
        href="#"
        onClick={[Function]}
      >
        à
      </a>
      ".
       
      <Link
        href="/help"
      >
        <a
          className="jsx-3269325724"
        >
          More help and examples...
        </a>
      </Link>
    </p>
  </Jumbotron>
  <div
    className="jsx-1742895473"
  >
    <MDSpinner
      color1="rgb(66, 165, 245)"
      color2="rgb(239, 83, 80)"
      color3="rgb(253, 216, 53)"
      color4="rgb(76, 175, 80)"
      duration={1333}
      size={28}
    />
    <JSXStyle
      css="div.jsx-1742895473{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}"
      styleId="1742895473"
    />
  </div>
  <JSXStyle
    css="p.jsx-3269325724{text-align:center;}"
    styleId="3269325724"
  />
</Layout>
`;

exports[`Index page With a codepoint search result (1 codepoint result) matches snapshot 1`] = `
<Layout>
  <Jumbotron
    tag="div"
  >
    <UnicodeSearchField
      value="U+0041"
    />
    <p
      className="jsx-3269325724 examples"
    >
      Examples: "
      <a
        className="jsx-3269325724 suggestionLink"
        href="#"
        onClick={[Function]}
      >
        U+0041
      </a>
      ", "
      <a
        className="jsx-3269325724 suggestionLink"
        href="#"
        onClick={[Function]}
      >
        HEART
      </a>
      ", "
      <a
        className="jsx-3269325724 suggestionLink"
        href="#"
        onClick={[Function]}
      >
        à
      </a>
      ".
       
      <Link
        href="/help"
      >
        <a
          className="jsx-3269325724"
        >
          More help and examples...
        </a>
      </Link>
    </p>
  </Jumbotron>
  <SearchResult
    status="SUCCESS"
  >
    <CodepointSummary
      codepoint={
        Object {
          "name": "LATIN CAPITAL LETTER A",
          "properties": Object {
            "block": "ASCII",
            "generalCategory": "Lu",
          },
          "value": "U+0041",
        }
      }
      key="U+0041"
    />
  </SearchResult>
  <JSXStyle
    css="p.jsx-3269325724{text-align:center;}"
    styleId="3269325724"
  />
</Layout>
`;

exports[`Index page Without search results matches snapshot 1`] = `
<Layout>
  <Jumbotron
    tag="div"
  >
    <UnicodeSearchField
      onChange={[Function]}
      value="current search"
    />
    <p
      className="jsx-3269325724 examples"
    >
      Examples: "
      <a
        className="jsx-3269325724 suggestionLink"
        href="#"
        onClick={[Function]}
      >
        U+0041
      </a>
      ", "
      <a
        className="jsx-3269325724 suggestionLink"
        href="#"
        onClick={[Function]}
      >
        HEART
      </a>
      ", "
      <a
        className="jsx-3269325724 suggestionLink"
        href="#"
        onClick={[Function]}
      >
        à
      </a>
      ".
       
      <Link
        href="/help"
      >
        <a
          className="jsx-3269325724"
        >
          More help and examples...
        </a>
      </Link>
    </p>
  </Jumbotron>
  <SearchResult
    status="IDLE"
  />
  <JSXStyle
    css="p.jsx-3269325724{text-align:center;}"
    styleId="3269325724"
  />
</Layout>
`;
